Release 4.18
	- add ImplodeFilter and implode() method to convert a long dataset into a wide dataset
	- add hxlexplode and hxlimplode command-line scripts
	- change hxl.model.Column.parse to return None for an empty string, or False for a malformed one
	- add logging for malformed tagspecs

2020-02-25 Release 4.17
	- add ability to flatten lists as non-JSON (just separated by " | ")

2019-12-09 Release 4.16
	- added optional encoding parameter to hxl.io.data() etc. to force a character encoding
	- fix bug opening an Excel file when the server sends a
	  content-type: zip MIME type
	- fix bug peeking at UTF-8 files with many extended characters
	- fix minor stability issues (e.g. unclosed file resources)
	- fix CSV delimiter detection to ensure "," is always tried first

2019-04-04 Release 4.15.1
	- better error report when trying to open a zip file that's not an
	  XLSX or zipped CSV

2019-03-29 Release 4.15
	- improve support for private datasets: fix custom HTTP headers
	  with CKAN URL munging; add HXL_HTTP_HEADER and --http-header
	  support for all scripts
	- add hxl.io.HXLIOException as base class for all HXL I/O-related
	  exceptions, with an optional url property
	- add hxl.io.HXLAuthorizationException, and throw it for private
	  CKAN datasets or any 403 Forbidden response
	- better error reporting for external validation errors

2019-03-04 Release 4.14
	- report external validation errors (e.g. missing taxonomy)
	  separately (and don't invalidate the dataset)
	- improve date parsing, and fix bug in borderline case (month but
	  no year)
	- stability improvements for formulas (including "NaN" result for DIV0)
	- efficiency improvements in validation tests
	- fix a bug when reading an empty dataset
	- fix a DIV0 bug in validation
	- fix lexer conflict with jsonpath_rw package

2019-02-06 Release 4.13.2
	- rewrite, correct, and simplify formula parsing
	- fix bug in add_column filter
	- add round() function to formulas

2019-01-31 Release 4.13.1